force-app/main/default/objects/Home_Services__c/fields/cardName__c.field-meta.xml
<CustomField>
    <fullName>cardName__c</fullName>
    <label>Card Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>