force-app/main/default/objects/Home_Services__c/fields/Chargent_ID__c.field-meta.xml
<CustomField>
    <fullName>Chargent_ID__c</fullName>
    <label>Chargent ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>