force-app/main/default/objects/Home_Services__c/fields/Chargent_Payments__c.field-meta.xml
<CustomField>
    <fullName>Chargent_Payments__c</fullName>
    <label>Chargent Payments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>