force-app/main/default/objects/Home_Services__c/fields/checkAmount__c.field-meta.xml
<CustomField>
    <fullName>checkAmount__c</fullName>
    <label>Check Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>