force-app/main/default/objects/Home_Services__c/fields/Checking_Populate_Date__c.field-meta.xml
<CustomField>
    <fullName>Checking_Populate_Date__c</fullName>
    <label>Checking Populate Date</label>
    <type>Date</type>
</CustomField>