force-app/main/default/objects/Home_Services__c/fields/checkNumber__c.field-meta.xml
<CustomField>
    <fullName>checkNumber__c</fullName>
    <label>Check Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>