force-app/main/default/objects/Home_Services__c/fields/Closed_Won__c.field-meta.xml
<CustomField>
    <fullName>Closed_Won__c</fullName>
    <formula>IF(
OR( TEXT(Home_Services_Status__c) = &quot;Closed Won&quot;,TEXT(Home_Services_Status__c) = &quot;Closed Won/Canceled&quot;),1,0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closed Won</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>