force-app/main/default/objects/Home_Services__c/fields/COC_Completed__c.field-meta.xml
<CustomField>
    <fullName>COC_Completed__c</fullName>
    <label>COC Completed</label>
    <type>DateTime</type>
</CustomField>