force-app/main/default/objects/Home_Services__c/fields/COGS_Labor__c.field-meta.xml
<CustomField>
    <fullName>COGS_Labor__c</fullName>
    <formula>(Total_Cost_of_Goods__c  +  Total_Cost_of_Labor__c ) / Total_Gross_Sale__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>COGS + Labor %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>