force-app/main/default/objects/Home_Services__c/fields/Commission_Gross_Sale_Amount__c.field-meta.xml
<CustomField>
    <fullName>Commission_Gross_Sale_Amount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Commission - Gross Sale Amount</label>
    <type>Checkbox</type>
</CustomField>