force-app/main/default/objects/Home_Services__c/fields/Commissions_Record_Amount__c.field-meta.xml
<CustomField>
    <fullName>Commissions_Record_Amount__c</fullName>
    <defaultValue>0.0</defaultValue>
    <label>Commissions Record Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>