force-app/main/default/objects/Home_Services__c/fields/Communication_By__c.field-meta.xml
<CustomField>
    <fullName>Communication_By__c</fullName>
    <label>Communication By</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>POTS</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Radio</fullName>
            </value>
            <value>
                <fullName>Cellular</fullName>
            </value>
            <value>
                <fullName>Internet</fullName>
            </value>
            <value>
                <fullName>VoIP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>