force-app/main/default/objects/Home_Services__c/fields/Completed_Date_Permitting__c.field-meta.xml
<CustomField>
    <fullName>Completed_Date_Permitting__c</fullName>
    <label>Completed Date</label>
    <type>DateTime</type>
</CustomField>