force-app/main/default/objects/Home_Services__c/fields/Contract_Period_Service__c.field-meta.xml
<CustomField>
    <fullName>Contract_Period_Service__c</fullName>
    <label>Contract Period (Months)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>12</fullName>
                <default>true</default>
                <label>12</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>