force-app/main/default/objects/Home_Services__c/fields/Contract_Status_Product__c.field-meta.xml
<CustomField>
    <fullName>Contract_Status_Product__c</fullName>
    <label>Contract Status Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Waiting</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>