force-app/main/default/objects/Home_Services__c/fields/contractDocument__c.field-meta.xml
<CustomField>
    <fullName>contractDocument__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contract Document</label>
    <type>Checkbox</type>
</CustomField>