force-app/main/default/objects/Home_Services__c/fields/Cost_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Cost_Allocation__c</fullName>
    <formula>IF( 
CONTAINS( RecordType.Name,&apos;Home Automation&apos;), $Setup.HS_Cost_Allocation__c.Protection_Source__c  ,
IF( 
CONTAINS( RecordType.Name,&apos;Water Treatment&apos;),  $Setup.HS_Cost_Allocation__c.Aqua__c ,
IF( 
CONTAINS( RecordType.Name,&apos;Solar&apos;),  $Setup.HS_Cost_Allocation__c.Nergy__c ,
IF( 
CONTAINS( RecordType.Name,&apos;Remodel&apos;), $Setup.HS_Cost_Allocation__c.Latch__c ,0

))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Other Cost Allocation %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>