force-app/main/default/objects/Home_Services__c/fields/Cost_of_labor__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_labor__c</fullName>
    <label>Cost of labor</label>
    <summarizedField>Line_Item__c.Cost__c</summarizedField>
    <summaryForeignKey>Line_Item__c.Home_Service__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>