force-app/main/default/objects/Home_Services__c/fields/Costs_In_Line__c.field-meta.xml
<CustomField>
    <fullName>Costs_In_Line__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Costs In-Line</label>
    <type>Checkbox</type>
</CustomField>