force-app/main/default/objects/Home_Services__c/fields/Coupon__c.field-meta.xml
<CustomField>
    <fullName>Coupon__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coupon</label>
    <referenceTo>Coupon__c</referenceTo>
    <relationshipLabel>Home Services</relationshipLabel>
    <relationshipName>Home_Services</relationshipName>
    <type>Lookup</type>
</CustomField>