force-app/main/default/objects/Home_Services__c/fields/Created_Time__c.field-meta.xml
<CustomField>
    <fullName>Created_Time__c</fullName>
    <formula>TimeValue( CreatedDate - 0.2916)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Time</label>
    <type>Time</type>
</CustomField>