force-app/main/default/objects/Home_Services__c/fields/Credit_Card_CSV__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_CSV__c</fullName>
    <label>Card CSV</label>
    <length>4</length>
    <type>Text</type>
</CustomField>