force-app/main/default/objects/Home_Services__c/fields/Credit_Card_Populated_Date__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Populated_Date__c</fullName>
    <label>Credit Card Populated Date</label>
    <type>Date</type>
</CustomField>