force-app/main/default/objects/Home_Services__c/fields/Credit_Score_Text__c.field-meta.xml
<CustomField>
    <fullName>Credit_Score_Text__c</fullName>
    <label>Credit Score</label>
    <length>255</length>
    <type>Text</type>
</CustomField>