force-app/main/default/objects/Home_Services__c/fields/CSV_Service__c.field-meta.xml
<CustomField>
    <fullName>CSV_Service__c</fullName>
    <label>CSV.</label>
    <length>4</length>
    <maskChar>X</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>