force-app/main/default/objects/Home_Services__c/fields/CSV_Service_System__c.field-meta.xml
<CustomField>
    <fullName>CSV_Service_System__c</fullName>
    <label>CSV:</label>
    <length>4</length>
    <type>Text</type>
</CustomField>