force-app/main/default/objects/Home_Services__c/fields/Current_Window_Coverings__c.field-meta.xml
<CustomField>
    <fullName>Current_Window_Coverings__c</fullName>
    <label>Current Window Coverings</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Blinds</fullName>
            </value>
            <value>
                <fullName>Shutters</fullName>
            </value>
            <value>
                <fullName>Drapes</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>