force-app/main/default/objects/Home_Services__c/fields/Customer_Alarm__c.field-meta.xml
<CustomField>
    <fullName>Customer_Alarm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Alarm</label>
    <referenceTo>DiacoAlarm__Diaco_Customer_Alarm__c</referenceTo>
    <relationshipLabel>Home Services</relationshipLabel>
    <relationshipName>Home_Services</relationshipName>
    <type>Lookup</type>
</CustomField>