force-app/main/default/objects/Home_Services__c/fields/Customer_Service_Visit_Completed__c.field-meta.xml
<CustomField>
    <fullName>Customer_Service_Visit_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Service Visit Completed</label>
    <type>Checkbox</type>
</CustomField>