force-app/main/default/objects/Home_Services__c/fields/Customer_Tax__c.field-meta.xml
<CustomField>
    <fullName>Customer_Tax__c</fullName>
    <formula>IF(ISPICKVAL(Tax__c, &apos;Yes&apos;), Sales_Tax_Total__c + Installation__r.Sales_Tax__c, 0.00)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>