force-app/main/default/objects/Home_Services__c/fields/Data__c.field-meta.xml
<CustomField>
    <fullName>Data__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Data</label>
    <type>Checkbox</type>
</CustomField>