force-app/main/default/objects/Home_Services__c/fields/Date_Signed_Product_Contract__c.field-meta.xml
<CustomField>
    <fullName>Date_Signed_Product_Contract__c</fullName>
    <label>Date Signed</label>
    <type>DateTime</type>
</CustomField>