force-app/main/default/objects/Home_Services__c/fields/Deduction_Reason__c.field-meta.xml
<CustomField>
    <fullName>Deduction_Reason__c</fullName>
    <label>Deduction Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>