force-app/main/default/objects/Home_Services__c/fields/Deductions__c.field-meta.xml
<CustomField>
    <fullName>Deductions__c</fullName>
    <label>Deductions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>