force-app/main/default/objects/Home_Services__c/fields/Do_you_have_a_doorbell_camera__c.field-meta.xml
<CustomField>
    <fullName>Do_you_have_a_doorbell_camera__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do you have a doorbell camera</label>
    <type>Checkbox</type>
</CustomField>