force-app/main/default/objects/Home_Services__c/fields/Do_you_have_Nest__c.field-meta.xml
<CustomField>
    <fullName>Do_you_have_Nest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do you have Nest</label>
    <type>Checkbox</type>
</CustomField>