force-app/main/default/objects/Home_Services__c/fields/Electric_Behind_Fence__c.field-meta.xml
<CustomField>
    <fullName>Electric_Behind_Fence__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Electric Behind Fence</label>
    <type>Checkbox</type>
</CustomField>