force-app/main/default/objects/Home_Services__c/fields/End_of_Term_Product__c.field-meta.xml
<CustomField>
    <fullName>End_of_Term_Product__c</fullName>
    <formula>ADDMONTHS( DATETIMEVALUE( Sending_Date_Product_Contract__c ) , Value(Text( Contract_Period_Product__c  )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End of Term</label>
    <type>Date</type>
</CustomField>