force-app/main/default/objects/Home_Services__c/fields/End_of_Term_Service__c.field-meta.xml
<CustomField>
    <fullName>End_of_Term_Service__c</fullName>
    <formula>ADDMONTHS( DATETIMEVALUE(Sending_Date_Service_Contract__c)  , Value(Text(Contract_Period_Service__c )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End of Term</label>
    <type>Date</type>
</CustomField>