force-app/main/default/objects/Home_Services__c/fields/Energy_Efficiencies__c.field-meta.xml
<CustomField>
    <fullName>Energy_Efficiencies__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Energy Efficiencies</label>
    <type>Checkbox</type>
</CustomField>