force-app/main/default/objects/Home_Services__c/fields/EnvelopeAgreeId__c.field-meta.xml
<CustomField>
    <fullName>EnvelopeAgreeId__c</fullName>
    <label>EnvelopeAgreeId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>