force-app/main/default/objects/Home_Services__c/fields/envelopeId__c.field-meta.xml
<CustomField>
    <fullName>envelopeId__c</fullName>
    <label>EnvelopeId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>