force-app/main/default/objects/Home_Services__c/fields/Equipment_Payment_Before_Tax__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Payment_Before_Tax__c</fullName>
    <label>Equipment Payment Before Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>