force-app/main/default/objects/Home_Services__c/fields/Estimated_Commission__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Commission__c</fullName>
    <formula>Total_Sales_Commissions__c /  Total_Gross_Sale__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Commission %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>