force-app/main/default/objects/Home_Services__c/fields/Estimated_Loan_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Loan_Completion_Date__c</fullName>
    <formula>TODAY() +   VALUE(Number_of_payments__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Loan Completion Date</label>
    <type>Date</type>
</CustomField>