force-app/main/default/objects/Home_Services__c/fields/Estimated_Net_Profit__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Net_Profit__c</fullName>
    <formula>Total_Gross_Profit__c -  Total_Sales_Commissions__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Net Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>