force-app/main/default/objects/Home_Services__c/fields/Estimated_Net_Profit_Percent__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Net_Profit_Percent__c</fullName>
    <formula>Estimated_Net_Profit__c / Total_Gross_Sale__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Net Profit %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>