force-app/main/default/objects/Home_Services__c/fields/Existing_Contract__c.field-meta.xml
<CustomField>
    <fullName>Existing_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Existing Contract</label>
    <type>Checkbox</type>
</CustomField>