force-app/main/default/objects/Home_Services__c/fields/Existing_Generating_Solar_System__c.field-meta.xml
<CustomField>
    <fullName>Existing_Generating_Solar_System__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Existing Generating Solar System</label>
    <type>Checkbox</type>
</CustomField>