force-app/main/default/objects/Home_Services__c/fields/Expiration_Month__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Month__c</fullName>
    <label>Expiration Month</label>
    <length>2</length>
    <type>Text</type>
</CustomField>