force-app/main/default/objects/Home_Services__c/fields/Expiration_Year__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Year__c</fullName>
    <label>Expiration Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>