force-app/main/default/objects/Home_Services__c/fields/Explain_SRP__c.field-meta.xml
<CustomField>
    <fullName>Explain_SRP__c</fullName>
    <label>Explain SRP</label>
    <type>TextArea</type>
</CustomField>