force-app/main/default/objects/Home_Services__c/fields/fAddress__c.field-meta.xml
<CustomField>
    <fullName>fAddress__c</fullName>
    <formula>Street__c +&quot; &quot;+  City__c +&quot; &quot;+ State__c +&quot; &quot;+ Zip__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fAddress</label>
    <type>Text</type>
</CustomField>