force-app/main/default/objects/Home_Services__c/fields/Femail__c.field-meta.xml
<CustomField>
    <fullName>Femail__c</fullName>
    <formula>Account__r.PersonEmail</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email</label>
    <type>Text</type>
</CustomField>