force-app/main/default/objects/Home_Services__c/fields/Finance_Company__c.field-meta.xml
<CustomField>
    <fullName>Finance_Company__c</fullName>
    <label>Finance Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>