force-app/main/default/objects/Home_Services__c/fields/Financed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Financed_Amount__c</fullName>
    <label>Financed Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>