force-app/main/default/objects/Home_Services__c/fields/FinanceId__c.field-meta.xml
<CustomField>
    <fullName>FinanceId__c</fullName>
    <label>FinanceId</label>
    <length>25</length>
    <type>Text</type>
</CustomField>