force-app/main/default/objects/Home_Services__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <formula>IF(ISBLANK(Account__r.FirstName),&apos;&apos;,Account__r.FirstName)</formula>
    <label>First Name</label>
    <type>Text</type>
</CustomField>