force-app/main/default/objects/Home_Services__c/fields/FirstPayment__c.field-meta.xml
<CustomField>
    <fullName>FirstPayment__c</fullName>
    <label>1st payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>