force-app/main/default/objects/Home_Services__c/fields/firstTime__c.field-meta.xml
<CustomField>
    <fullName>firstTime__c</fullName>
    <defaultValue>false</defaultValue>
    <label>firstTime</label>
    <type>Checkbox</type>
</CustomField>