force-app/main/default/objects/Home_Services__c/fields/Flooring_Sales_Number_of_Rooms__c.field-meta.xml
<CustomField>
    <fullName>Flooring_Sales_Number_of_Rooms__c</fullName>
    <label>Flooring Sales number of rooms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>