force-app/main/default/objects/Home_Services__c/fields/Full_Name_Customer_1__c.field-meta.xml
<CustomField>
    <fullName>Full_Name_Customer_1__c</fullName>
    <formula>First_Name__c +&quot; &quot; + Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Name - Customer 1</label>
    <type>Text</type>
</CustomField>