force-app/main/default/objects/Home_Services__c/fields/G_A_Allocation__c.field-meta.xml
<CustomField>
    <fullName>G_A_Allocation__c</fullName>
    <formula>Net_Sales_Price__c * $Setup.Job_Costing_Settings__c.G_A_Allocation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>G&amp;A Allocation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>